fix(Table): mount a table that has stored width then update data to let it show scroll bar, the table will show horizontal scroll bar

--- a/components/table/index.styl
+++ b/components/table/index.styl
@@ -218,6 +218,15 @@
     tr.k-expand
         background $table-expanded-tr-bg-color
 
+    // fluid height
+    &.k-fluid-height
+        .k-table-wrapper
+            height 100%
+            display flex
+            flex-direction column
+        .k-tbody
+            flex 1
+
 .k-table-wrapper
     // overflow auto
     overflow hidden
